[package]
name = "arewelangyet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
tera = { version = "1.19.0" }
serde = { version = "1.0.173", features = ["derive"] }
toml_edit = { version = "0.18", features = ["easy"] }
